[package]
name = "tcp-h264-rtsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.132"
serde_derive = "^1.0.132"
toml = "^0.5.8"
url = "2.2.2"

[dependencies.tokio]
version = "^1.15.0"
features = ["full"]
